--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -19,5 +19,6 @@
 @import "modules/_section-infrastructure";
 @import "modules/_section-total";
 @import "modules/_section-explenation";
+@import "modules/_section-bar";
 @import "modules/_swiper";
 @import "modules/_footer";
