--- a/app/scss/layout/_extra.scss
+++ b/app/scss/layout/_extra.scss
@@ -158,3 +158,9 @@
         transform-origin: center;
     }
 }
+
+.chart-smart text {
+    font-weight: 500;
+    font-size: 5px;
+    color: #363636;
+}
