--- a/app/scss/modules/_section-assistance.scss
+++ b/app/scss/modules/_section-assistance.scss
@@ -225,6 +225,7 @@
         margin-bottom: 20px;
         display: flex;
         flex-wrap: wrap;
+        z-index: -2;
 
         @media (min-width: 992px) {
             width: 50%;
@@ -269,6 +270,11 @@
         letter-spacing: 0.03em;
         color: #034257;
         padding-bottom: 20px;
+        padding-top: 10px;
+
+        @media (min-width: 992px) {
+            padding-top: 0;
+        }
     }
 
     &__note {
