--- a/app/scss/modules/_main-banner.scss
+++ b/app/scss/modules/_main-banner.scss
@@ -143,6 +143,11 @@
         }
     }
 
+    &__logo {
+        display: flex;
+        align-items: center;
+    }
+
     &__img {
         width: 150px;
 
